# Config-Table

./: CMakeLists.txt  README.md
examples/: basic-example.cpp  example_with_config_struct.cpp
include/: config_table.h
src/: config_table.c
test/: test_config_table.cpp
